8153267: nmethod's exception cache not multi-thread safe

Reviewed-by: aph, jcm, kvn